mise a jour des routes et finalisations de la documetation des nouvelles fonctionnalités
